<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/winnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginEnd="156dp"
            android:text="@string/winner_text"
            android:textAlignment="center"
            android:textColor="@color/colorWin"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/shutdownImageSize"
            android:layout_height="@dimen/shutdownImageSize"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/close_app"
            android:onClick="shutdownOnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/poweroff_icon" />


    </android.support.constraint.ConstraintLayout>


    <ImageView
        android:id="@+id/restartGameBtn"
        android:layout_width="@dimen/pieceSize"
        android:layout_height="@dimen/pieceSize"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/restart_game"
        android:onClick="restartGameOnClick"
        android:visibility="invisible" />


    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="@dimen/sizeGrid"
        android:layout_height="@dimen/sizeGrid"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:orientation="horizontal"
        app:rowCount="3">


        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="0" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="1" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="2" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="3" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="4" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="5" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="6" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="7" />

        <ImageView
            android:layout_width="@dimen/pieceSize"
            android:layout_height="@dimen/pieceSize"
            android:layout_margin="@dimen/marginPiece"
            android:contentDescription="@string/piecePosition"
            android:onClick="showPieceOnClick"
            android:tag="8" />


    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/xScoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xScoreText"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/xScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultText"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/oScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/oScoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oScoreText"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>